codex-rs/core/tests/suite/snapshots/all__suite__compact__manual_compact_with_history_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_history_snapshot(\"Manual /compact with prior user history compacts existing history and the follow-up turn includes the compact summary plus new user message.\",\n&requests)"
---
Scenario: Manual /compact with prior user history compacts existing history and the follow-up turn includes the compact summary plus new user message.

## Window 1
-- request 1 (turn) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    first manual turn

## Window 2 (after request 1: settings changed (parallel_tool_calls, tools))
-- request 2 (compaction) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    first manual turn
04:message/assistant:
    FIRST_REPLY
05:message/user:
    <SUMMARIZATION_PROMPT>

## Window 3 (after request 2: input diverged at item 04, settings changed (parallel_tool_calls, tools))
-- request 3 (turn) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    first manual turn
04:message/user:
    <COMPACTION_SUMMARY>
    FIRST_MANUAL_SUMMARY
05:message/user:
    second manual turn

## Window 4 (after request 3: settings changed (parallel_tool_calls, tools))
-- request 4 (compaction) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    first manual turn
04:message/user:
    <COMPACTION_SUMMARY>
    FIRST_MANUAL_SUMMARY
05:message/user:
    second manual turn
06:message/assistant:
    SECOND_LARGE_REPLY
07:message/user:
    <SUMMARIZATION_PROMPT>

## Window 5 (after request 4: input diverged at item 01, settings changed (parallel_tool_calls, tools))
-- request 5 (turn) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/user:
    first manual turn
02:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
03:message/user:
    <ENVIRONMENT_CONTEXT>
04:message/user:
    second manual turn
05:message/user:
    <COMPACTION_SUMMARY>
    SECOND_MANUAL_SUMMARY
06:message/user:
    post compact follow-up
